<resources>
    <string name="app_name">RMS</string>
    <string name="title_activity_pending_request">PendingRequest</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>

    <string name="home_second">Home Second</string>
    <string name="contact">Contact</string>
    <string name="about">About</string>
    <string name="log_out">Log out</string>
    <string name="add_a_schedule">Add a schedule</string>
    <string name="home">Home</string>
    <string name="show_pending_schedule">Show pending schedule</string>
    <string name="show_com_schedule">Show completed schedules</string>
    <string name="content_search_by_nid">content search by nid</string>
    <string name="total_cases">Total cases:</string>
    <string name="next">Next</string>
</resources>
