<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/home"
            android:icon="@drawable/ic_home_black_24dp"
            android:title="@string/home"/>
        <item
            android:id="@+id/nav_add_donate_schedule"
            android:icon="@drawable/ic_schedule_black_24dp"
            android:title="@string/add_a_schedule"/>
        <item
            android:id="@+id/nav_show_pending_donate_schedule"
            android:icon="@drawable/ic_schedule_black_24dp"
            android:title="@string/show_pending_schedule"/>
        <item
            android:id="@+id/nav_show_completed_donate_schedule"
            android:icon="@drawable/ic_schedule_black_24dp"
            android:title="@string/show_com_schedule"/>
        <item
            android:id="@+id/logout"
            android:icon="@drawable/ic_exit_to_app_black_24dp"
            android:title="@string/log_out" />
    </group>

    <item android:title="Communicate">
        <menu>
            <item
                android:id="@+id/about"
                android:icon="@drawable/ic_info_outline_black_24dp"
                android:title="@string/about" />
            <item
                android:id="@+id/contact"
                android:icon="@drawable/ic_phone_black_24dp"
                android:title="@string/contact" />
        </menu>
    </item>

</menu>
